--- a/src/main/js/html/nurse_add.html
+++ b/src/main/js/html/nurse_add.html
@@ -44,7 +44,7 @@
               <input type="text" data-ng-model="$ctrl.nurse.phoneNumber" id="phoneNumber" class="full-width">
             </p>
           </div>
-          <div data-ng-if="$ctrl.flags.nursePayEnabled">
+          <div>
             <h2>Pay Rates</h2>
             <div class="columns">
               <p class="colx3-left">
