--- a/src/main/js/html/nurse.html
+++ b/src/main/js/html/nurse.html
@@ -3,8 +3,9 @@
   <section class="grid_12">
     <div id="tab-global" class="tabs-content">
       <ul class="tabs js-tabs same-height">
-        <li data-ng-repeat="tab in $ctrl.tabs" data-ng-class="{current: $ctrl.selectedTab == tab}">
-          <a href="#/nurse/{{$ctrl.nurseId}}/{{tab}}" title="{{tab}}">{{tab}}</a>
+        <li data-ng-repeat="tab in $ctrl.tabs" data-ng-show="tab.isEnabled()"
+            data-ng-class="{current: $ctrl.selectedTab == tab}">
+          <a data-ng-click="$ctrl.setSelectedTab(tab)" title="{{tab.name}}">{{tab.name}}</a>
         </li>
       </ul>
       <div class="tabs-content">
@@ -44,7 +45,7 @@
             <select data-ng-model="$ctrl.nurse.payPreference" id="payPreference" class="full-width"
                     data-ng-change="$ctrl.update('payPreference')"
                     data-ng-options="payPreference for payPreference in $ctrl.payPreferences"></select>
-            <div data-ng-if="$ctrl.flags.nursePayEnabled">
+            <div data-ng-if="$ctrl.flags.payCodesEnabled">
               <label for="payFlat">Per Visit Pay</label>
               <input type="text" data-ng-model="$ctrl.nurse.payFlat" id="payFlat" class="full-width"
                      data-on-change="$ctrl.update('payFlat')">
